adl-backend/src/test/resources/functional/error/helloworldColl/Server.adl

primitive error.helloworldColl.Server {
  
  provides Service as s[2] ;
  
  source server.c;
}
